--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_URI=mongodb+srv://node2Car:1atVkS8V9y7ZDtC7@cluster0.ncjuthj.mongodb.net/Uday
 PORT=2612
 SECRET="UDAYAN-STOCK-APP@123"
 ACCESS_TOKEN_TIME="365d"
+cloud_name=dcagmx6hq
+api_key=152478213721556
+api_secret=CgSCm_qpPVYO-E3RduGFTPmSw7Y
