--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "udayan-stock-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -32,7 +32,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
-    "serverless-http": "^3.2.0",
+    "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
     "serverless-offline": "^12.0.4"
   }
 }
