--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_URI=mongodb+srv://node2Car:1atVkS8V9y7ZDtC7@cluster0.ncjuthj.mongodb.net/Udayan-stock-Backend
+DB_URL=mongodb+srv://node2Car:1atVkS8V9y7ZDtC7@cluster0.ncjuthj.mongodb.net/Udayan-stock-Backend
 PORT=2612
 SECRET="UDAYAN-STOCK-APP@123"
 ACCESS_TOKEN_TIME="365d"
-cloud_name=dcagmx6hq
-api_key=152478213721556
-api_secret=CgSCm_qpPVYO-E3RduGFTPmSw7Y
+CLOUD_NAME=dcagmx6hq
+CLOUD_KEY=152478213721556
+CLOUD_SECRET=CgSCm_qpPVYO-E3RduGFTPmSw7Y
