--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
+    "serverless": "^3.35.2",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
