--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/nishaflyweisnode2/Udayan-stock-app#readme",
   "dependencies": {
+    "axios": "^1.6.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
+    "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
@@ -30,9 +33,12 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
+    "papaparse": "^5.4.1",
     "serverless": "^3.35.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "socketcluster-client": "^19.1.0"
   },
   "devDependencies": {
     "serverless-offline": "^12.0.4"
