--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "csv-parse": "^5.5.3",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
@@ -34,11 +36,13 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.0.1",
     "papaparse": "^5.4.1",
     "serverless": "^3.35.2",
     "serverless-http": "^3.2.0",
-    "socketcluster-client": "^19.1.0"
+    "socketcluster-client": "^19.1.0",
+    "socketcluster-server": "^19.0.1"
   },
   "devDependencies": {
     "serverless-offline": "^12.0.4"
