--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: "udayan-stock"
+service: "udayan-stock1"
 
 provider:
     name: aws
@@ -11,7 +11,7 @@ provider:
 functions:
     app:
         handler: index.handler
-        name: udayan-stock
+        name: udayan-stock1
         events:
             - http:
                   path: /
